--- a/org.knime.knip.imglib2/pom.xml
+++ b/org.knime.knip.imglib2/pom.xml
@@ -17,8 +17,8 @@
   <description>This bundle provides an implementation of the ImgLib2 framework.</description>
 
   <properties>
-    <no-embed.dependencies>org.knime.knip.scijava, scijava-common</no-embed.dependencies>
-    <export.packages>net.imglib2.*, Jama.*</export.packages>
+    <no-embed.dependencies>org.knime.knip.scijava, knip-ij</no-embed.dependencies>
+    <export.contents>net.imglib2.*, Jama.*</export.contents>
   </properties>
 
   <repositories>
