Add bundle-pom modules and specific versions to base pom
TODO as osgi doesn't allow non-numeric version numbers we had to introduce
osgi specific versions for some plugins. However, this is not required
anymore as soon as we auto-generate the files (it will be done implicit)

--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,26 @@
 
 		<felix-plugin.version>2.4.0</felix-plugin.version>
 
+		<commons-lang3.version>3.1</commons-lang3.version>
+		<commons-math3.version>3.2</commons-math3.version>
+		<mahout-collections.version>1.0</mahout-collections.version>
 
 		<scijava-jep.version>2.4.2</scijava-jep.version>
 
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
+		<knip-imglib2-ops.version>0.1.3</knip-imglib2-ops.version>
 		<imglib2-roi.version>0.2.1-SNAPSHOT</imglib2-roi.version>
 
+		<!-- TODO OSGi doesn't support non-numerical version numbers. Therefore 
+			we have to manually set bundle version (osgi compatible version). When auto-generating 
+			the stuff, we can take care about these issues automatically -->
+		<imglib2-roi-osgi.version>0.2.1</imglib2-roi-osgi.version>
+		<imglib2-ij-osgi.version>2.0.0</imglib2-ij-osgi.version>
+		<imglib2-ui-osgi.version>2.0.0</imglib2-ui-osgi.version>
+		<imglib2-realtransform-osgi.version>2.0.0</imglib2-realtransform-osgi.version>
+		<imagej1-osgi.version>1.49</imagej1-osgi.version>
+		<knip-trackmate.version>2.6.4</knip-trackmate.version>
 	</properties>
 
 	<prerequisites>
@@ -37,6 +50,16 @@
 	</prerequisites>
 
 
+	<modules>
+		<module>gov.nist.math.jama</module>
+		<module>org.knime.knip.imglib2.ops</module>
+		<module>org.apache</module>
+		<module>org.scijava</module>
+		<module>net.imglib2</module>
+		<module>net.imagej</module>
+		<module>io.scif</module>
+		<module>org.knime.knip.trackmate</module>
+	</modules>
 
 	<build>
 		<plugins>
