Add imagej-ui-awt and imagej-ui-swing

--- a/net.imagej/pom.xml
+++ b/net.imagej/pom.xml
@@ -21,6 +21,8 @@
 		<module>ij</module>
 		<module>imagej-common</module>
 		<module>imagej-ops</module>
+		<module>imagej-ui-awt</module>
+		<module>imagej-ui-swing</module>
 	</modules>
 
 </project>
