--- a/net.imagej/imagej-common/pom.xml
+++ b/net.imagej/imagej-common/pom.xml
@@ -7,7 +7,8 @@
 		<bundle.parent>net.imagej</bundle.parent>
 		<bundle.name>imagej-common</bundle.name>
 		<bundle.version>${imagej-common.version}</bundle.version>
-		<export.contents>net.imagej.*</export.contents>
+		<!-- TODO: Remove net.imglib2.meta as soon as service not available anymore -->
+		<export.contents>net.imagej.*, net.imglib2.meta.*</export.contents>
 	</properties>
 
 	<parent>
