--- a/net.imagej/imagej-ops/pom.xml
+++ b/net.imagej/imagej-ops/pom.xml
@@ -7,7 +7,8 @@
 		<bundle.parent>net.imagej</bundle.parent>
 		<bundle.name>imagej-ops</bundle.name>
 		<bundle.version>${imagej-ops.version}</bundle.version>
-		<export.contents>net.imagej.ops.*</export.contents>
+		<!-- TODO: Remove export of net.imagej.* as soon as code was removed from ops -->
+		<export.contents>net.imagej.ops.*,net.imagej.*</export.contents>
 	</properties>
 
 	<parent>
