--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -20,6 +20,18 @@
   	which can be used to generate a p2-repository from maven dependencies.
   	</description>
 
+	<properties>
+		<scijava.enforce.skip />
+		<jep.version>2.4.2</jep.version>
+
+		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
+			knip-ops should be gone soon -->
+		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
+		<imglib2-roi.version>0.2.1-SNAPSHOT</imglib2-roi.version>
+		<knip-trackmate-fork.version>2.7.1</knip-trackmate-fork.version>
+		<trove4j.version>3.0.3</trove4j.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.codehaus.gmaven</groupId>
