--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
-		<version>5.8.0</version>
+		<version>5.9.1</version>
 		<relativePath />
 	</parent>
 
@@ -27,7 +27,7 @@
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
-		<imglib2-roi.version>0.2.1-20150118.160436-4</imglib2-roi.version>
+		<imglib2-roi.version>0.2.1-SNAPSHOT</imglib2-roi.version>
 		<knip-trackmate-fork.version>2.7.1</knip-trackmate-fork.version>
 		<trove4j.version>3.0.3</trove4j.version>
 		<miglayout.version>3.7.4</miglayout.version>
