using bug-free scijava 2.42.2

--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -27,6 +27,7 @@
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
+		<scijava-common.version>2.42.2</scijava-common.version>
 		<imglib2-roi.version>0.3.1</imglib2-roi.version>
 		<knip-trackmate-fork.version>2.7.3</knip-trackmate-fork.version>
 		<trove4j.version>3.0.3</trove4j.version>
