--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -26,6 +26,7 @@
 
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
+		<imglib2-roi.version>0.3.2</imglib2-roi.version>
 		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
 		<scijava-common.version>2.42.2</scijava-common.version>
 		<imglib2-roi.version>0.3.1</imglib2-roi.version>
