--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -23,7 +23,7 @@
 	<properties>
 		<scijava.enforce.skip />
 		<jep.version>2.4.2</jep.version>
-
+		<fifesoft.version>2.5.7</fifesoft.version>
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
