--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -36,6 +36,7 @@
 		<slf4j-api.version>1.7.10</slf4j-api.version>
 		<slf4j-log4j12.version>1.7.10</slf4j-log4j12.version>
 		<xerces.version>2.11.0</xerces.version>
+		<scijava-cache.version>0.1.0</scijava-cache.version>
 	</properties>
 
 	<dependencies>
