--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -38,6 +38,7 @@
 		<xerces.version>2.11.0</xerces.version>
 		<scijava-cache.version>0.1.0</scijava-cache.version>
 		<scijava-common.version>2.47.0</scijava-common.version>
+		<guava.version>18.0</guava.version>
 	</properties>
 
 	<dependencies>
