--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -22,6 +22,8 @@
 
 	<properties>
 		<scijava.enforce.skip />
+		<imglib2-roi.version>0.4.1</imglib2-roi.version>
+
 		<jep.version>2.4.2</jep.version>
 		<fifesoft.version>2.5.7</fifesoft.version>
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
