--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -40,6 +40,7 @@
 		<xerces.version>2.11.0</xerces.version>
 		<scijava-cache.version>0.1.0</scijava-cache.version>
 		<scijava-common.version>2.47.0</scijava-common.version>
+		<jython-shaded.version>2.5.3</jython-shaded.version>
 		<guava.version>18.0</guava.version>
 	</properties>
 
