--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -25,6 +25,8 @@
 		<jep.version>2.4.2</jep.version>
 		<fifesoft.version>2.5.7</fifesoft.version>
 
+		<imagej-ops.version>0.23.0</imagej-ops.version>
+
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 
