--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -24,6 +24,7 @@
 		<scijava.enforce.skip />
 		<jep.version>2.4.2</jep.version>
 		<fifesoft.version>2.5.8</fifesoft.version>
+		<imglib2.version>2.6.0</imglib2.version>
 
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
