--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -35,7 +35,7 @@
 		<miglayout.version>3.7.4</miglayout.version>
 		<miglayout-swing.version>4.2</miglayout-swing.version>
 		<commons-collections.version>3.2.1</commons-collections.version>
-		<commons-math.version>3.5.0</commons-math.version>
+		<commons-math3.version>3.5</commons-math3.version>
 		<args4j.version>2.0.29</args4j.version>
 		<slf4j-api.version>1.7.10</slf4j-api.version>
 		<slf4j-log4j12.version>1.7.10</slf4j-log4j12.version>
