--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -28,7 +28,8 @@
 		<!-- bigdataviewer versions -->
 		<bigdataviewer-core.version>2.2.1</bigdataviewer-core.version>
 		<spim_data.version>2.0.1</spim_data.version>
-
+		<spim_data.version>2.0.1</spim_data.version>
+		<ui-behaviour.version>1.0.4</ui-behaviour.version>
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.4.1</knip-tmp-imglib2-ops.version>
