--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -30,6 +30,8 @@
 		<spim_data.version>2.0.1</spim_data.version>
 		<spim_data.version>2.0.1</spim_data.version>
 		<ui-behaviour.version>1.0.4</ui-behaviour.version>
+		<vistools.version>1.0.0-beta-2</vistools.version>
+
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.4.1</knip-tmp-imglib2-ops.version>
