--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -36,6 +36,7 @@
 		<knip-tmp-imglib2-ops.version>0.4.1</knip-tmp-imglib2-ops.version>
 		<knip-trackmate-fork.version>2.7.3</knip-trackmate-fork.version>
 
+		<bio-formats.version>5.2.3</bio-formats.version>
 		<trove4j.version>3.0.3</trove4j.version>
 		<commons-collections.version>3.2.1</commons-collections.version>
 		<commons-math3.version>3.5</commons-math3.version>
