--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -46,6 +46,7 @@
 		<xerces.version>2.11.0</xerces.version>
 		<jython-shaded.version>2.7.0</jython-shaded.version>
 		<guava.version>18.0</guava.version>
+		<threedviewer.version>0.0.1-SNAPSHOT</threedviewer.version>
 	</properties>
 
 	<dependencies>
