--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -33,6 +33,11 @@
 		<xerces.version>2.11.0</xerces.version>
 		<jython-shaded.version>2.7.0</jython-shaded.version>
 
+		<!-- can be removed when KNIME update-site offer 2.6.1 -->
+		<rsyntaxtextarea.version>2.5.8</rsyntaxtextarea.version>
+		<autocomplete.version>2.5.8</autocomplete.version>
+		<languagesupport.version>2.5.8</languagesupport.version>
+
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.4.1</knip-tmp-imglib2-ops.version>
