--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -22,8 +22,8 @@
 
 	<properties>
 		<!-- There are several properties enforced, which we currently don't maintain -->
-		<enforcer.skip>true</enforcer.skip>		
-	
+		<enforcer.skip>true</enforcer.skip>
+
 		<!-- manually manged versions -->
 		<ui-behaviour.version>1.2.0</ui-behaviour.version>
 		<vistools.version>1.0.0-beta-4</vistools.version>
@@ -32,6 +32,7 @@
 		<args4j.version>2.0.29</args4j.version>
 		<xerces.version>2.11.0</xerces.version>
 		<jython-shaded.version>2.7.0</jython-shaded.version>
+ 		<ilastik4ij.version>1.0.2</ilastik4ij.version>
 
 		<!-- can be removed when KNIME update-site offer 2.6.1 -->
 		<rsyntaxtextarea.version>2.5.8</rsyntaxtextarea.version>
