--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -33,7 +33,9 @@
 		<xerces.version>2.11.0</xerces.version>
 		<jython-shaded.version>2.7.0</jython-shaded.version>
  		<ilastik4ij.version>1.0.3</ilastik4ij.version>
-                <guava.version>20.0</guava.version>
+ 		<!-- We do not want to override the version of guava used during the build, only the one defined in update site -->
+		<guava-external.version>19.0</guava-external.version>
+		<commons-math3.version>3.4.1</commons-math3.version>
 
 		<!-- can be removed when KNIME update-site offer 2.6.1 -->
 		<rsyntaxtextarea.version>2.5.8</rsyntaxtextarea.version>
