--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>17.1.1</version>
+		<version>19.2.0</version>
 		<relativePath/>
 	</parent>
 
@@ -24,9 +24,12 @@
 		<!-- There are several properties enforced, which we currently don't maintain -->
 		<enforcer.skip>true</enforcer.skip>
 
+
+        <sciview.version>0.0.2-SNAPSHOT</sciview.version>
+
 		<!-- manually manged versions -->
 		<ui-behaviour.version>1.2.0</ui-behaviour.version>
-		<vistools.version>1.0.0-beta-4</vistools.version>
+		<vistools.version>1.0.0-beta-8</vistools.version>
 		<trove4j.version>3.0.3</trove4j.version>
 		<commons-collections.version>3.2.2</commons-collections.version>
 		<args4j.version>2.0.29</args4j.version>
@@ -35,14 +38,12 @@
  		<ilastik4ij.version>1.0.3</ilastik4ij.version>
  		<!-- We do not want to override the version of guava used during the build, only the one defined in update site -->
 		<guava-external.version>19.0</guava-external.version>
+
 		<jama.version>1.0.3</jama.version>
 
         <!-- This is the version shipped with the KNIME update site -->
 		<commons-math3.version>3.4.1</commons-math3.version>
-
-        <!-- Manual overide until latest version is available in pom-scijava -->
-        <scifio.version>0.33.0</scifio.version>
-
+        <gson.version>2.8.1</gson.version>
 
 		<!-- can be removed when KNIME update-site offer 2.6.1 -->
 		<rsyntaxtextarea.version>2.6.0</rsyntaxtextarea.version>
