--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -24,8 +24,8 @@
 		<!-- There are several properties enforced, which we currently don't maintain -->
 		<enforcer.skip>true</enforcer.skip>
 
-
         <sciview.version>0.1.0</sciview.version>
+        <scijava-common.version>2.73.1</scijava-common.version>
 
 		<!-- manually manged versions -->
 		<ui-behaviour.version>1.2.0</ui-behaviour.version>
